@@ -1313,3 +1313,33 @@ sub xst_parse_xml
 
   return undef;
 }
+
+sub xst_parse_xml_children
+{
+  my ($file, $varpath) = @_;
+  my ($model, $branch, @children);
+
+  $model  = &xst_xml_model_scan ($file);
+  $branch = &xst_xml_model_find ($model, $varpath);
+
+  if (!$branch) { return \@children; }
+
+  my @list = @$branch;
+  shift @list;  # Attributes
+
+  while (@list)
+  {
+    if (@list [0] ne "__unparsed__" && @children [0] ne "0")
+    {
+      push @children, shift @list;
+    }
+    else
+    {
+      shift @list;
+    }
+
+    shift @list;
+  }
+
+  return \@children;
+}
